# clockforge-app

./: .gitignore  LICENSE  README.md  build.ps1  build.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  scheduler.rs  stopwatch.rs
src-tauri/src/commands/: dashboard.rs  stopwatch.rs  tasks.rs  timers.rs
src/api/: index.ts  tauri.ts
src/components/: IconNav.tsx  PageHeader.tsx  TitleBar.tsx
src/pages/: Dashboard.tsx  NotificationTimer.tsx  ShutdownTimer.tsx  Stopwatch.tsx  TaskList.tsx  index.ts
src/stores/: navigationStore.ts  stopwatchStore.ts  taskStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: index.ts
