[package]
name = "clockforge"
version = "1.0.0"
description = "ClockForge - Desktop Timer Application"
authors = ["ryenlii"]
license = "MIT"
repository = "https://github.com/RyenLee/clockforge"
edition = "2024"

[lib]
name = "clockforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clockforge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
